fixed the centering on mobile views for images

--- a/css/index.css
+++ b/css/index.css
@@ -281,25 +281,6 @@ header .header-div {
   flex-wrap: wrap;
   justify-content: space-between;
 }
-@media (max-width: 500px) {
-  .home .content-section {
-    width: 90%;
-    margin: 30px 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column wrap;
-  }
-  .home .content-section .text-content {
-    width: 90%;
-  }
-  .home .content-section img {
-    width: 90%;
-  }
-  .home .content-section .img-content {
-    width: 90%;
-  }
-}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
@@ -308,8 +289,32 @@ header .header-div {
   width: 48%;
   padding-left: 1%;
 }
-.home .content-section .img-content img {
-  border-radius: 10px;
+@media (max-width: 500px) {
+  .home .content-section {
+    width: 90%;
+    margin: 30px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+  }
+  .home .content-section .text-content {
+    width: 100%;
+    padding: 0;
+    margin: 0 auto;
+    align-items: center;
+  }
+  .home .content-section .img-content {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row nowrap;
+  }
+  .home .content-section .img-content img {
+    border-radius: 10px;
+  }
 }
 .home #intro-content {
   margin: 30px 0;
