--- a/less/home-page.less
+++ b/less/home-page.less
@@ -53,25 +53,6 @@ header{
     flex-wrap: wrap;
     justify-content: space-between;
 
-    @media @mobile{
-      width:90%;
-      margin: 30px 5%;
-
-      .flex(center, center, column, wrap);
-
-      .text-content{
-        width: 90%;
-      }
-
-      img{
-        width:90%;
-      }
-
-      .img-content{
-        width:90%;
-      }
-    }
-
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -80,11 +61,33 @@ header{
     .img-content {
       width: 48%;
       padding-left: 1%;
+    }
 
-      img {
-        border-radius: 10px;
+    @media @mobile{
+      width:90%;
+      margin: 30px auto;
+
+      .flex(center, center, column, wrap);
+
+      .text-content {
+        width: 100%;
+        padding: 0;
+        margin: 0 auto;
+        align-items: center;
+
       }
 
+      .img-content {
+        width: 100%;
+        padding: 0;
+        .flex(center,center,row,nowrap);
+
+        img {
+          border-radius: 10px;
+        }
+
+
+      }
     }
 
   }
